- Calendar month view style changed like google calendar. - Added bgColor property to events object for colorful events. - Changed package.json properties (name, version, description, author, repository).

--- a/src/less/event.less
+++ b/src/less/event.less
@@ -7,8 +7,9 @@
   border-radius: @event-border-radius;
   color: @event-color;
 
+  // edited by onursimsek94
   &.rbc-selected {
-    background-color: darken(@event-bg, 10%);
+    // background-color: darken(@event-bg, 10%);
   }
 }
 
