--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -40,16 +40,21 @@
   color: @out-of-range-color;
 }
 
+// edited by onursimsek94
 .rbc-off-range-bg {
-  background: @out-of-range-bg-color;
+  // background: @out-of-range-bg-color;
 }
 
+// edited by onursimsek94
 .rbc-header {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding: 0 3px;
-  text-align: center;
+  // padding: 0 3px;
+  padding-left: 8px; // added
+  // text-align: center;
+  text-align: left; // added
+  color: #757575; // added
   vertical-align: middle;
   font-weight: bold;
   font-size: 90%;
