--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -29,4 +29,6 @@
 
 @rbc-css-prefix: rbc-i;
 
-@today-highlight-bg: #eaf6ff;
+// edited by onursimsek94
+// @today-highlight-bg: #eaf6ff;
+@today-highlight-bg: #f5f5f5;
