- Added material-ui package. - Changed navigation buttons. - Changed view buttons (button to dropdown).

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -60,6 +60,19 @@
   font-size: 90%;
   min-height: 0;
 
+  // edited by onursimsek94
+  &.rbc-now { // added
+    > span { // added
+      color: #4285f4 !important; // added
+    }
+
+    > a {
+      > span { // added
+        color: #4285f4 !important; // added
+      }
+    }
+  }
+
   > a {
     &, &:active, &:visited {
       color: inherit;
