- Added left menu. - Toolbar button style edited.

--- a/src/less/toolbar.less
+++ b/src/less/toolbar.less
@@ -71,7 +71,7 @@
   user-select: none; // added
   margin-top: 15px; // added
 
-  > div:first-child:not(:last-child) { // added
+  > div:nth-child(2):not(:last-child) { // added
     margin-top: 2px;
   }
 
